--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-    - name: Clone-down
-      uses: actions/checkout@v3 
-      - name: my-step
+      - name: Clone-down
+        uses: actions/checkout@v3 
+      - name: Run-Gradle
         run: ci/build-app.sh
