--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,3 +9,8 @@ jobs:
         uses: actions/checkout@v3 
       - name: Run-Gradle
         run: ci/build-app.sh
+      - name: Upload Repo
+        uses: actions/upload-artifact@v3
+        with:
+          name: code  
+          path: .
