--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,6 +9,8 @@ jobs:
         uses: actions/checkout@v3 
       - name: Run-Gradle
         run: ci/build-app.sh
+      - name: Test
+        run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       - name: Upload Repo
         uses: actions/upload-artifact@v3
         with:
